hphp/test/zend/good/ext/gd/tests/imagelayereffect_error3.php.skipif
<?php 
	if (!extension_loaded("gd")) die("skip GD not present");
	if (!GD_BUNDLED) die('skip function only available in bundled, external GD detected');
?>