hphp/test/zend/bad/ext/mysqli/tests/mysqli_options_int_and_float_native.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

require_once('connect.inc');
if (!$IS_MYSQLND)	
	die("skip mysqlnd only test");
?>